new design and functions

--- a/page.html
+++ b/page.html
@@ -9,6 +9,16 @@
     <script src="script.js"></script>
 </head>
 <body class="body">
+   
+    <div>
+        <img id="myImage" src="https://m.media-amazon.com/images/I/71V9nv5oIEL._AC_SX466_.jpg" width="150" height="158">
+        <ul>
+            <li><a href="https://www.google.com/" target="_blank">Google</a></li>
+            <li><a href="https://github.com/bi-creator/pracites" target="_blank">Git lab</a></li>
+            <li><a href="#contact">Nothing</a></li>
+            <li><a href="#about">Nothing-2</a></li>
+          </ul>  
+    </div>
     <div>
         <h1 class="heading">welcom</h1>
         <h1 class="heading">this is a practise web page</h1>
@@ -28,6 +38,7 @@
     <p>to print this page click on  <button class="button" type="button" onclick="toprint()">to print</button> </p>
     <p > data  <button class="button" type="button" onclick="tochange()">for data </button>  </p>
     <p id="o">to check</p>
+    
 
 
 
