--- a/page.html
+++ b/page.html
@@ -60,11 +60,16 @@
         <input type="text" id="fname" name="fname" value="type text"><br>
         <input type="submit" value="Submit">
       </form>
-      <video autoplay loop>
+      <video width="100" height="50"  autoplay loop>
         <source src="k.mp4" type="video/mp4" >
       </video>
     
     </div>
+    <p id="de"></p>
+    <script>
+        const myCar = new getset(100);
+        document.getElementById("de").innerHTML =myCar.getset();
+    </script>
     
 
 
