new pages and fetching data from text file in server

--- a/pagewithgrids.html
+++ b/pagewithgrids.html
@@ -23,6 +23,9 @@
         </div>
         <div class="grid-item item2">
             <img id="myImage" src="image.jpg" width="100%" height="auto"><br>
+            <video width="100%" height="auto"  autoplay loop>
+                <source src="k.mp4" type="video/mp4" >
+              </video>
         </div>
         <div class="grid-item item3" >
             <h1>Sample text</h1>
