jQuary implemented, simple integration with fast api

--- a/page1.html
+++ b/page1.html
@@ -7,6 +7,8 @@
     <title>practise web page</title>
     <link rel="stylesheet" type="text/css" href="pagehtml.css">
     <script src="script.js"></script>
+    <!-- <script src="jquery-3.6.0.min.js"></script> -->
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
 </head>
 <body class="body">
     <!-- <img id="myImage" src="https://m.media-amazon.com/images/I/71V9nv5oIEL._AC_SX466_.jpg" width="150" height="158"> -->
@@ -63,7 +65,7 @@
     </div>
     <div class="divm">
         <p class="grenhig"><a href="http://www.google.com" target="_blank">a link to google</a></p><br>
-    <script src="script.js"></script>
+   
     <p id="demo">A Paragraph.</p>
 
     <button class="button" type="button" onclick="myFunction()">Try it</button><br>
@@ -89,7 +91,7 @@
     <p id="de"></p>
     <script>
         const myCar = new getset(100);
-        document.getElementById("de").innerHTML =myCar.getset();
+        document.getElementById("de").innerHTML =myCar.getset;
     </script>
    
     
