--- a/page1.html
+++ b/page1.html
@@ -24,7 +24,7 @@
     <div >
         
         <ul>
-            <li ><a class ="lia" href="https://www.google.com/" target="_blank">Google</a></li>
+            <li ><a class ="lia" style="margin-left: 12px;" href="https://www.google.com/" target="_blank">Google</a></li>
             <li ><a class ="lia" href="https://github.com/bi-creator/pracites" target="_blank">Git lab</a></li>
             <li ><a class ="lia" href="page2.html">Nothing</a></li>
             <li ><a class ="lia" href="pagewithgrids.html">page with grids</a></li>
